assets/css/default.css
/* ... */
.light-theme .pure-button-secondary:not(.low-profile) {
  color: #335d7a;
  background-color: #fff2;
}

.light-theme a {
  color: #335d7a;
  text-decoration: none;
}

/* All links that do not fit with the default color goes here */
.light-theme a:not([data-id]) > .icon,
.light-theme .pure-u-lg-1-5 > .h-box > a[href^="/watch?"],
.light-theme .playlist-restricted > ol > li > a {
  color: #303030;
}

.light-theme .pure-menu-heading {
  color: #565d64;
}

@media (prefers-color-scheme: light) {
  .no-theme a:hover,
  .no-theme a:active,
  .no-theme summary:hover,
  .no-theme a:focus,
  .no-theme summary:focus {
    color: #075A9E !important;
  }

  .no-theme .pure-button-primary:hover,
  .no-theme .pure-button-primary:focus,
  .no-theme .pure-button-secondary:hover,
  .no-theme .pure-button-secondary:focus {
    color: #fff !important;
    border-color: rgba(0, 182, 240, 0.75) !important;
    background-color: rgba(0, 182, 240, 0.75) !important;
  }

  .no-theme .pure-button-secondary:not(.low-profile) {
    color: #335d7a;
    background-color: #fff2;
  }

  .no-theme a {
    color: #335d7a;
    text-decoration: none;
  }

  /* All links that do not fit with the default color goes here */
  .no-theme a:not([data-id]) > .icon,
  .no-theme .pure-u-lg-1-5 > .h-box > a[href^="/watch?"],
  .no-theme .playlist-restricted > ol > li > a {
    color: #303030;
  }

  .light-theme .pure-menu-heading {
    color: #565d64;
  }
}


/*
 * Dark theme
 */

.dark-theme a:hover,
.dark-theme a:active,
.dark-theme summary:hover,
.dark-theme a:focus,
.dark-theme summary:focus {
  color: rgb(0, 182, 240);
}

.dark-theme .pure-button-primary:hover,
.dark-theme .pure-button-primary:focus,
.dark-theme .pure-button-secondary:hover,
.dark-theme .pure-button-secondary:focus {
  color: #fff !important;
  border-color: rgb(0, 182, 240) !important;
  background-color: rgba(0, 182, 240, 1) !important;
}

.dark-theme .pure-button-secondary {
  background-color: #0002;
  color: #ddd;
}

.dark-theme a {
  color: #a0a0a0;
  text-decoration: none;
}

body.dark-theme {
  background-color: rgba(35, 35, 35, 1);
  color: #f0f0f0;
}

.dark-theme .pure-form legend {
  color: #f0f0f0;
}

.dark-theme .pure-menu-heading {
  color: #f0f0f0;
}

.dark-theme input,
.dark-theme select,
.dark-theme textarea {
  color: rgba(35, 35, 35, 1);
}

.dark-theme .pure-form input[type="file"] {
  color: #f0f0f0;
}

.dark-theme .searchbar input {
  background-color: inherit;
  color: inherit;
}

@media (prefers-color-scheme: dark) {
  .no-theme a:hover,
  .no-theme a:active,
  .no-theme a:focus {
    color: rgb(0, 182, 240);
  }

  .no-theme .pure-button-primary:hover,
  .no-theme .pure-button-primary:focus,
  .no-theme .pure-button-secondary:hover,
  .no-theme .pure-button-secondary:focus {
    color: #fff !important;
    border-color: rgb(0, 182, 240) !important;
    background-color: rgba(0, 182, 240, 1) !important;
  }

  .no-theme .pure-button-secondary {
    background-color: #0002;
    color: #ddd;
  }

  .no-theme a {
    color: #a0a0a0;
    text-decoration: none;
  }

  body.no-theme {
    background-color: rgba(35, 35, 35, 1);
    color: #f0f0f0;
  }

  .no-theme .pure-form legend {
    color: #f0f0f0;
  }

  .no-theme .pure-menu-heading {
    color: #f0f0f0;
  }

  .no-theme input,
  .no-theme select,
  .no-theme textarea {
    color: rgba(35, 35, 35, 1);
  }

  .no-theme .pure-form input[type="file"] {
    color: #f0f0f0;
  }

  .no-theme .searchbar input {
    background-color: inherit;
    color: inherit;
  }
}


/*
 * Miscellanous
 */


/*With commit d9528f5 all contents of the page is now within a flexbox. However,
the hr element is rendered improperly within one.
See https://stackoverflow.com/a/34372979 for more info */
hr {
  margin: 10px 0 10px 0;
}

/* Description Expansion Styling*/
#descexpansionbutton,
#music-desc-expansion {
  display: none;
}

#descexpansionbutton ~ div {
  overflow: hidden;
}

#descexpansionbutton:not(:checked) ~ div {
  max-height: 8.3em;
}

#descexpansionbutton:checked ~ div {
  overflow: unset;
  height: 100%;
}

#descexpansionbutton ~ label {
  order: 1;
  margin-top: 20px;
}

label[for="descexpansionbutton"]:hover,
label[for="music-desc-expansion"]:hover {
  cursor: pointer;
}

/* Bidi (bidirectional text) support */
h1, h2, h3, h4, h5, p,
#descriptionWrapper,
#description-box,
#music-description-box {
  unicode-bidi: plaintext;
  text-align: start;
}

#descriptionWrapper {
  max-width: 600px;
  white-space: pre-wrap;
}

#music-description-box {
  display: none;
}

#music-desc-expansion:checked ~ #music-description-box {
  display: block;
}

#music-desc-expansion ~ label > h3 > .ion-ios-arrow-up,
#music-desc-expansion:checked ~ label > h3 > .ion-ios-arrow-down {
  display: none;
}

#music-desc-expansion:checked ~ label > h3 > .ion-ios-arrow-up,
#music-desc-expansion ~ label > h3 > .ion-ios-arrow-down {
  display: inline;
}

/* Select all the music items except the first one */
.music-item + .music-item {
  border-top: 1px solid #ffffff;
}

/* Center the "invidious" logo on the search page */
#logo > h1 { text-align: center; }

/* IE11 fixes */
:-ms-input-placeholder { color: #888; }

/* Wider settings name to less word wrap */
.pure-form-aligned .pure-control-group label { width: 19em; }

.channel-emoji {
  margin: 0 2px;
}

